Aligned and fixed boxes for contact section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans:&display=swap');
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, {
     font-family: 'Noto Sans', sans-serif;
 }
 
@@ -348,6 +348,47 @@ img {
     text-transform: uppercase;
     letter-spacing: .2rem;
     text-align: center;
+}
+
+#contact .contact{
+    flex-direction: column;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+#contact .contact-details {
+    width: 400px;
+}
+
+#contact .contact-detail {
+    width: 80%;
+    padding: 30px;
+    text-align: center;
+    border-radius: 10px;
+    margin: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 0px 0px 18px 0 #00002c;
+}
+
+#contact .icon {
+    width: 50px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+}
+
+#contact .contact-detail h1 {
+    font-size: 1.7rem;
+    font-weight: 500;
+    margin-bottom: 5px;
+}
+
+#contact .contact-detail h2 {
+    font-size: 1.1rem;
+    line-height: 2rem;
+    font-weight: 500;
 }
 
 @keyframes text_reveal_box{
